<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main"
    android:background="#fff">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_section_0"
            android:id="@+id/textView2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_section_3"
            android:id="@+id/button"
            android:layout_marginTop="25dp"
            android:textAlignment="center" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_section_6"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textAlignment="center" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_section_4"
            android:id="@+id/button3"
            android:layout_marginTop="25dp"
            android:textAlignment="center" />

    </LinearLayout>
</RelativeLayout>
